# scopinator-rs

./: .envrc  .gitignore  CLAUDE.md  Cargo.toml  Justfile  MEMORY.md  README.md
.github/workflows/: ci.yml  extended.yml
conformance/: README.md
conformance/parity/: compare.py  pyscopinator_report.py
conformance/reports/: .gitignore
conformance/sessions/s30_fw706_a/: control.jsonl  manifest.json
conformance/sessions/s30_fw706_b/: control.jsonl  manifest.json
conformance/sessions/s30_fw706_small/: control.jsonl  manifest.json
conformance/sessions/s50_fw670_a/: control.jsonl  manifest.json
conformance/sessions/s50_fw670_b/: control.jsonl  manifest.json
conformance/sessions/s50_fw670_c/: control.jsonl  manifest.json
crates/scopinator/: Cargo.toml
crates/scopinator-alpaca/: Cargo.toml
crates/scopinator-alpaca/src/: client.rs  discovery.rs  error.rs  lib.rs
crates/scopinator-cli/: Cargo.toml
crates/scopinator-cli/src/: main.rs
crates/scopinator-cli/src/commands/: discover_cmd.rs  goto_cmd.rs  mod.rs  park_cmd.rs  status_cmd.rs
crates/scopinator-indi/: Cargo.toml
crates/scopinator-indi/src/: error.rs  lib.rs
crates/scopinator-indi/src/protocol/: mod.rs  property.rs  xml.rs
crates/scopinator-seestar/: Cargo.toml
crates/scopinator-seestar/examples/: conformance_report.rs  probe_escape.rs  probe_goto.rs  probe_move.rs  probe_proxy.rs  probe_trigger.rs
crates/scopinator-seestar/src/: auth.rs  client.rs  error.rs  lib.rs
crates/scopinator-seestar/src/command/: mod.rs  params.rs  serialize.rs
crates/scopinator-seestar/src/connection/: control.rs  imaging.rs  mod.rs  reconnect.rs  registry.rs  rtsp.rs
crates/scopinator-seestar/src/event/: mod.rs  types.rs
crates/scopinator-seestar/src/protocol/: discovery.rs  frame.rs  json_rpc.rs  mod.rs
crates/scopinator-seestar/src/response/: mod.rs
crates/scopinator-seestar/tests/: control_integration.rs  session_replay.rs
crates/scopinator-seestar/tests/common/: mod.rs
crates/scopinator-types/: Cargo.toml
crates/scopinator-types/src/: coordinates.rs  device_info.rs  enums.rs  error.rs  exposure.rs  filter.rs  focuser.rs  lib.rs
crates/scopinator/src/: error.rs  lib.rs  manager.rs
crates/scopinator/src/backend/: mod.rs
crates/scopinator/src/backend/seestar/: camera.rs  event_translator.rs  mod.rs  mount.rs
crates/scopinator/src/device/: capabilities.rs  mod.rs  status.rs  traits.rs
crates/scopinator/src/event/: bus.rs  mod.rs
crates/scopinator/src/sequencer/: command.rs  context.rs  mod.rs  sequence.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: discovery_parse.rs  frame_parse.rs  json_rpc_classify.rs
memory/: project_context.md  user_profile.md
tools/: analyze_sessions.py  sanitize_session.py
