[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "GPL-3.0-or-later"
repository = "https://github.com/astrophotograph/scopinator-rs"

[workspace.dependencies]
scopinator-types = { version = "0.1.0", path = "crates/scopinator-types" }
scopinator-seestar = { version = "0.1.0", path = "crates/scopinator-seestar" }
scopinator-alpaca = { version = "0.1.0", path = "crates/scopinator-alpaca" }
scopinator-indi = { version = "0.1.0", path = "crates/scopinator-indi" }
scopinator = { version = "0.1.0", path = "crates/scopinator" }

anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
quick-xml = "0.37"
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
socket2 = "0.5"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
