[package]
name = "scopinator-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
serde_json = "1"

scopinator-seestar = { path = "../crates/scopinator-seestar" }
scopinator-types = { path = "../crates/scopinator-types" }
scopinator-indi = { path = "../crates/scopinator-indi" }

[[bin]]
name = "frame_parse"
path = "fuzz_targets/frame_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "json_rpc_classify"
path = "fuzz_targets/json_rpc_classify.rs"
test = false
doc = false
bench = false

[[bin]]
name = "discovery_parse"
path = "fuzz_targets/discovery_parse.rs"
test = false
doc = false
bench = false

[profile.release]
debug = 1

# Detach from the parent workspace; cargo-fuzz manages its own.
[workspace]
