[package]
name = "scopinator-alpaca"
version = "0.1.0"
description = "ASCOM Alpaca backend for scopinator"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
scopinator-types.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
socket2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
