[package]
name = "scopinator-cli"
version = "0.1.0"
description = "CLI for the scopinator telescope control library"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "scopinator"
path = "src/main.rs"

[dependencies]
scopinator.workspace = true
scopinator-types.workspace = true
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
