[package]
name = "scopinator-seestar"
version = "0.1.0"
description = "Seestar smart telescope protocol implementation"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
scopinator-types.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
socket2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
