[package]
name = "scopinator-types"
version = "0.1.0"
description = "Shared types for the scopinator telescope control library"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
