[package]
name = "scopinator"
version = "0.1.1"
description = "Telescope control library with pluggable backends"
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["seestar"]
seestar = ["dep:scopinator-seestar"]
alpaca = ["dep:scopinator-alpaca"]
indi = ["dep:scopinator-indi"]

[dependencies]
scopinator-types.workspace = true
scopinator-seestar = { workspace = true, optional = true }
scopinator-alpaca = { workspace = true, optional = true }
scopinator-indi = { workspace = true, optional = true }
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
bytes.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
